# dictate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
audio/: AudioRecorder.cpp  AudioRecorder.h
engine/include/: WhisperEngine.h
engine/src/: WhisperEngine.cpp
overlay/: main.swift
overlay/DictateOverlay.app/: Untitled
overlay/DictateOverlay.app/Contents/: Info.plist
overlay/DictateOverlay.app/Contents/MacOS/: DictateOverlay
